2016-09-27  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync.in: Increase version number.

2016-09-27  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Allow greenbone-nvt-sync to fall back to community feed if no access
	key is available.

	* tools/greenbone-nvt-sync.in: Add check if an access key is available
	and use community feed as fallback.
	(log_info, log_notice, log_warning): New functions.
	(is_feed_current): Fall back to community feed if no access key is
	available.
	(do_wget_community_feed, do_curl_community_feed)
	(do_rsync_community_feed, do_sync_community_feed): New functions.
	(sync_feed): Fall back to community feed if no access key is
	available.
	(do_self_test): Do not fail if access key is missing. Check rsync
	availablilty only in mode using access key.

2016-09-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_host): Send a "Host dead" host detail when the
	host is dead.

2016-09-26  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/CMakeLists.txt: Add add_definitions for SCANNER_NVT_TIMEOUT to
	have it defined in the C code.

2016-09-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Don't flush the kb when --cfg-specs is
	provided.

2016-09-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove support for OTP over TCP sockets.

	* src/comm.c (is_client_present), src/hosts.c (hosts_read_client),
	src/ntp.c (ntp_read_prefs): Remove handling of otp over tcp.

	* src/openvassd.c (loading_client_handle, loading_handler_start)
	(scanner_thread, main_loop): Remove handling of otp over tcp.
	(init_ssl_ctx, init_network): Remove function.
	(main): Remove --listen --port --gnutls-priorities and --dh-params
	cli parameters.

	* doc/openvassd.8.in: Update documentation.

2016-09-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (forward): Don't end sending loop when nsend() returns 0.
